# TinKer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
benchmarks/: bench_attention.py  bench_e2e.py  bench_rmsnorm.py  bench_swiglu.py  plot_results.py
configs/: rtx_3050.yaml  rtx_3060.yaml  rtx_3070.yaml  rtx_3080.yaml  rtx_3090.yaml  rtx_4060.yaml  rtx_4070.yaml  rtx_4080.yaml  rtx_4090.yaml  rtx_5060.yaml  rtx_5070.yaml  rtx_5080.yaml  rtx_5090.yaml
examples/: patch_1386.py  patch_any_model.py
tests/: test_attention.py  test_numerical.py  test_rmsnorm.py  test_swiglu.py
tinker/: __init__.py  optimize.py  patch.py
tinker/kernels/: __init__.py  fused_attention.py  fused_rmsnorm.py  fused_swiglu.py
tinker/modules/: __init__.py  attention.py  feed_forward.py  normalization.py
tinker/utils/: __init__.py  autotune.py
